test_programs/compile_failure/noirc_frontend_tests_error_if_attribute_not_in_scope/src/main.nr

        #[not_in_scope]
        fn main() {}
    